--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "prisma": "^5.5.2",
     "tailwindcss": "^3"
