--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "prisma": "^5.5.2",
-    "tailwindcss": "^3"
+    "tailwindcss": "^3",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
