--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
