--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mock-aws-s3": "^4.0.2",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
+    "openai": "^4.20.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
