--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "cookie": "^0.6.0",
     "js-cookie": "^3.0.5",
-
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "openai": "^4.20.0",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
