--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cookie": "^0.6.0",
+    "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
