--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.5.2",
+    "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
