--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.5.2",
     "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.6.1",
